- 2014-11-27
    * Added interface `OldSound\RabbitMqBundle\Provider\QueuesProviderInterface`
    * Added `queues_provider` configuration for multiple consumer

- 2014-07-21
    * Added `reconnect` method into `OldSound\RabbitMqBundle\RabbitMq\BaseAmqp`

- 2014-02-24
    * Add a parameter to RPC client configuration to disable auto unserialize when adding call results to results array.

- 2013-01-18
    *  adds an an optional parameter for the AMQP Message Properties for the publish method of the Producer, so they can be set as well. For example, seeting the application_headers is now possible.

- 2012-06-04
    * Revert PR #46. It is still possible to override parameter classes but in a proper way.
    * Some default options for exchanges declared in the "producers" config section
        have changed to match the defaults of exchanges declared in the "consumers" section.
        The affected settings are:
            * `durable` was changed from `false` to `true`,
            * `auto_delete` was changed from `true` to `false`.
    * Adds basic_reject functionality to consumers. A message can be rejected by returning `false` from a callback.

- 2012-05-29
    * Merged PR #46 adding compiler passes for the configuration. Now the parameter classes can be overriden.
    * Treats queue arguments as a variableNode in the configuration to allow declaring HA Queues.

- 2012-01-03
    * Merged PR #14 Now instances of `PhpAmqpLib\Message\AMQPMessage` are passed to consumers instead of just the message body.
        The message body can be obtained then by writing `$msg->body` inside the `execute` method.
    * Merged PR #13 removing the need for the ContainerAwareInterface on consumers.
    * `rabbitmq:consumer` now takes a `--route` argument that can be used to specify the routing key.

- 2011-11-25:
    * Fixed autoload configuration example
    * Adds a producer that can publish data coming from STDIN. The use case will be to use it in combination with unix pipes.
