@@ -1,3 +1,0 @@
-composer.lock
-composer.phar
-vendor
