@@ -1,22 +1,0 @@
-language: php
-
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
-  - hhvm
- 
-matrix:
-    allow_failures:
-        - php: hhvm
-
-env:
-    - SYMFONY_VERSION="2.1.*"
-    - SYMFONY_VERSION="2.2.*"
-    - SYMFONY_VERSION="2.3.*"
-
-before_script:
-    - composer self-update
-    - composer require --no-update symfony/framework-bundle:${SYMFONY_VERSION}
-    - composer install --prefer-source
