@@ -1,30 +1,0 @@
-{
-    "name": "oldsound/rabbitmq-bundle",
-    "description": "Integrates php-amqplib with Symfony2 and RabbitMq",
-    "keywords": ["symfony2", "rabbitmq", "message", "queue"],
-    "type": "symfony-bundle",
-    "license": "MIT",
-    "authors": [{
-        "name" : "Alvaro Videla"
-    }],
-    "require": {
-        "php"                      : ">=5.3.0",
-        "symfony/framework-bundle" : "~2.1",
-        "symfony/yaml": "~2.0",
-        "videlalvaro/php-amqplib"  : "~2.4.0"
-    },
-    "require-dev": {
-        "symfony/console": "~2.0"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.6.x-dev"
-        }
-    },
-    "autoload": {
-        "psr-0": {
-            "OldSound\\RabbitMqBundle\\": ""
-        }
-    },
-    "target-dir" : "OldSound/RabbitMqBundle"
-}
